# py_cnab_api_client

./: LICENSE  README.md  pyproject.toml
py_cnab_api_client/: __init__.py  client.py  config.py  errors.py
py_cnab_api_client/banks/: base.py  registry.py  sicredi.py
py_cnab_api_client/models/: boleto.py  pagamento.py  pagamento_to_boleto.py  remessa.py
